--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 Werkzeug==3.1.3
+gunicorn
 wrapt==1.17.2
 zope.event==5.0
 zope.interface==7.2
